--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,20 +41,20 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v4
         with:
-          node-version: '16.x'
+          node-version: "16.x"
       - uses: ./.github/local-actions/yarn-install-and-cache
       - name: Create .env file
-        shell: 'bash'
+        shell: bash
         run: |
           touch .env
           echo GH_API_TOKEN=${{ secrets.GH_API_TOKEN }} >> .env
       - name: Build
-        shell: 'bash'
+        shell: bash
         run: |
           RELEASE_VERSION=${{ needs.versioning.outputs.new_tag }} yarn build
       - name: Read module name
         id: module_name
-        shell: 'bash'
+        shell: bash
         run: |
           echo "out=$(cat package.json | jq -r '.foundryModule.name')" >> $GITHUB_OUTPUT
       - name: Create zip
@@ -66,5 +66,5 @@ jobs:
         with:
           token: ${{ secrets.GH_TOKEN }}
           tag: ${{ needs.versioning.outputs.new_tag }}
-          artifacts: './dist/module.json,${{ steps.module_name.outputs.out }}_${{ needs.versioning.outputs.new_tag }}.zip'
+          artifacts: "./dist/module.json,${{ steps.module_name.outputs.out }}_${{ needs.versioning.outputs.new_tag }}.zip"
           body: ${{ needs.versioning.outputs.changelog }}
