--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -24,8 +24,24 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v4
         with:
-          node-version: '16.x'
+          node-version: "16.x"
       - uses: ./.github/local-actions/yarn-install-and-cache
+
+  spellcheck:
+    name: Spellcheck
+    runs-on: ubuntu-latest
+    needs:
+      - prepare
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "16.x"
+      - uses: ./.github/local-actions/yarn-install-and-cache
+      - name: Spellcheck
+        shell: bash
+        run: |
+          yarn spellcheck
 
   lint:
     name: Lint
@@ -36,10 +52,10 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v4
         with:
-          node-version: '16.x'
+          node-version: "16.x"
       - uses: ./.github/local-actions/yarn-install-and-cache
       - name: Lint
-        shell: 'bash'
+        shell: bash
         run: |
           yarn lint-ci
 
@@ -52,9 +68,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v4
         with:
-          node-version: '16.x'
+          node-version: "16.x"
       - uses: ./.github/local-actions/yarn-install-and-cache
       - name: Test
-        shell: 'bash'
+        shell: bash
         run: |
           yarn test-ci
