Use data directly from Google Sheets

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
+DATA_SPREADSHEET_ID=1SU834rU3BHtLv57bYg7TLZKWghYfZ5KHy2GjJ9fHbno
 FOUNDRY_DATA_PATH=C:\\Users\\Foo\\AppData\\Local\\FoundryVTT\\Data
 GH_API_TOKEN=
+GOOGLE_PRIVATE_KEY=""
+GOOGLE_SERVICE_ACCOUNT_EMAIL=
