--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -38,6 +38,13 @@ jobs:
         with:
           node-version: "16.x"
       - uses: ./.github/local-actions/yarn-install-and-cache
+      - name: Create .env file
+        shell: bash
+        run: |
+          echo -n "" > .env
+          echo DATA_SPREADSHEET_ID=${{ secrets.DATA_SPREADSHEET_ID }} >> .env
+          echo GOOGLE_PRIVATE_KEY="\"${{ secrets.GOOGLE_PRIVATE_KEY }}\"" >> .env
+          echo GOOGLE_SERVICE_ACCOUNT_EMAIL=${{ secrets.GOOGLE_SERVICE_ACCOUNT_EMAIL }} >> .env
       - name: Spellcheck
         shell: bash
         run: |
