--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-jest": "^29.7.0",
     "chalk": "^4.1.2",
     "cross-env": "^7.0.3",
+    "csv-parse": "^5.5.3",
     "dotenv": "^16.3.1",
     "eslint": "^8.56.0",
     "eslint-config-jquery": "^3.0.2",
@@ -39,6 +40,8 @@
     "eslint-plugin-jest": "^27.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "fs-extra": "^11.2.0",
+    "google-auth-library": "^9.4.1",
+    "google-spreadsheet": "^4.1.1",
     "hasha": "5.2.2",
     "jest": "^26.6.3",
     "jest-environment-jsdom": "^26",
@@ -73,6 +76,7 @@
     "lint-ci": "yarn lint --quiet",
     "test": "jest --config .jest.config.mjs",
     "test-ci": "yarn test --ci --runInBand --bail --silent",
-    "spellcheck": "yarn run spellchecker"
+    "prespellcheck": "yarn generateData",
+    "spellcheck": "yarn run spellchecker --no-gitignore"
   }
 }
