Add module fields to package. Use version in manifest

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "authors": [
     {
       "name": "iKindred",
-      "discord": "iKindred#8997",
+      "discord": "ikindred",
       "url": "https://github.com/mcavallo/"
     }
   ],
@@ -15,7 +15,9 @@
   "foundryModule": {
     "name": "wfrp4e-more-subspecies",
     "title": "WFRP4E: More Subspecies",
-    "description": "Adds a collection of new homebrew subspecies to choose from in the WFRP4E character generation."
+    "description": "Adds a collection of new homebrew subspecies to choose from in the WFRP4E character generation.",
+    "compatibilityMinimum": "11",
+    "compatibilityVerified": "11.315"
   },
   "private": true,
   "type": "module",
