Add automated Foundry release

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 DATA_SPREADSHEET_ID=1SU834rU3BHtLv57bYg7TLZKWghYfZ5KHy2GjJ9fHbno
 FOUNDRY_DATA_PATH=C:\\Users\\Foo\\AppData\\Local\\FoundryVTT\\Data
+FOUNDRY_RELEASE_TOKEN=
 GH_API_TOKEN=
 GOOGLE_PRIVATE_KEY=""
 GOOGLE_SERVICE_ACCOUNT_EMAIL=
