--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,6 +48,7 @@ jobs:
         run: |
           echo -n "" > .env
           echo DATA_SPREADSHEET_ID=${{ secrets.DATA_SPREADSHEET_ID }} >> .env
+          echo FOUNDRY_RELEASE_TOKEN=${{ secrets.FOUNDRY_RELEASE_TOKEN }} >> .env
           echo GH_API_TOKEN=${{ secrets.GH_API_TOKEN }} >> .env
           echo GOOGLE_PRIVATE_KEY="\"${{ secrets.GOOGLE_PRIVATE_KEY }}\"" >> .env
           echo GOOGLE_SERVICE_ACCOUNT_EMAIL=${{ secrets.GOOGLE_SERVICE_ACCOUNT_EMAIL }} >> .env
@@ -71,3 +72,7 @@ jobs:
           tag: ${{ needs.versioning.outputs.new_tag }}
           artifacts: "./dist/module.json,${{ steps.module_name.outputs.out }}_${{ needs.versioning.outputs.new_tag }}.zip"
           body: ${{ needs.versioning.outputs.changelog }}
+      - name: Release module
+        shell: bash
+        run: |
+          yarn foundry:release
