Add release script debug output

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,7 +48,7 @@ jobs:
         run: |
           echo -n "" > .env
           echo DATA_SPREADSHEET_ID=${{ secrets.DATA_SPREADSHEET_ID }} >> .env
-          echo FOUNDRY_RELEASE_TOKEN=${{ secrets.FOUNDRY_RELEASE_TOKEN }} >> .env
+          echo FOUNDRY_RELEASE_TOKEN="\"${{ secrets.FOUNDRY_RELEASE_TOKEN }}\"" >> .env
           echo GH_API_TOKEN=${{ secrets.GH_API_TOKEN }} >> .env
           echo GOOGLE_PRIVATE_KEY="\"${{ secrets.GOOGLE_PRIVATE_KEY }}\"" >> .env
           echo GOOGLE_SERVICE_ACCOUNT_EMAIL=${{ secrets.GOOGLE_SERVICE_ACCOUNT_EMAIL }} >> .env
