--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,16 +65,14 @@ jobs:
         run: |
           cd dist/
           zip -r ../${{ steps.module_name.outputs.out }}_${{ needs.versioning.outputs.new_tag }}.zip *
-      - name: Create release
+      - name: Create Github release
         uses: ncipollo/release-action@v1.9.0
         with:
           token: ${{ secrets.GH_TOKEN }}
           tag: ${{ needs.versioning.outputs.new_tag }}
           artifacts: "./dist/module.json,${{ steps.module_name.outputs.out }}_${{ needs.versioning.outputs.new_tag }}.zip"
           body: ${{ needs.versioning.outputs.changelog }}
-      - name: Release module
+      - name: Push release to Foundry
         shell: bash
         run: |
-          echo -n "" > .env
-          echo FOUNDRY_RELEASE_TOKEN="\"${{ secrets.FOUNDRY_RELEASE_TOKEN }}\"" >> .env
           yarn foundry:release
