--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
     "eslint-plugin-jest": "^27.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "fs-extra": "^11.2.0",
-    "google-auth-library": "^9.4.1",
-    "google-spreadsheet": "^4.1.1",
+    "googleapis": "^131.0.0",
     "hasha": "5.2.2",
     "jest": "^26.6.3",
     "jest-environment-jsdom": "^26",
@@ -71,6 +70,7 @@
     "foundry:unlink": "node -r dotenv/config scripts/foundryUnlink.js",
     "foundry:release": "node -r dotenv/config scripts/foundryRelease.js",
     "generateData": "node -r dotenv/config scripts/generateData.js",
+    "sheets": "node -r dotenv/config scripts/sheetsTest.js",
     "prebuild": "yarn generateData",
     "build": "rimraf --glob dist/** && rollup --config .rollup.config.js",
     "predev": "yarn generateData",
